feat: 대기열이 꽉 찼을 때, 게임 생성 기능 추가